--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <!-- Responsive menu -->
             <nav class="nav-menu" id="nav-menu">
                 <ul>
-                    <li><a href="#home" class="active" id="link-home">Home</a></li>
-                    <li><a href="#about" id="link-about">about us</a></li>
-                    <li><a href="#portfolio" id="link-portfolio">PORTFOLIO</a></li>
-                    <li><a href="#clients" id="link-clients">clients</a></li>
-                    <li><a href="#team" id="link-team">team</a></li>
-                    <li><a href="#services" id="link-services">services</a></li>
-                    <li><a href="#blog" id="link-blog">Blog</a></li>
-                    <li><a href="#contact" id="link-contact">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">about us</a></li>
+                    <li><a href="#portfolio">PORTFOLIO</a></li>
+                    <li><a href="#clients">clients</a></li>
+                    <li><a href="#team">team</a></li>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -873,6 +873,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jQuery.scrollSpeed.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/activeScrolling.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
