--- a/Joy/index.html
+++ b/Joy/index.html
@@ -267,7 +267,7 @@
         <h2 class="section-title gallery-title">Галерея:</h2>
         <div class="gallery-slider slider">
             <!-- 1 -->
-            <div class="container">
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
@@ -284,66 +284,12 @@
                     </div>
                     <div class="view-btn">
                         <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
                     </div>
                 </div>
             </div>
             <!-- 2 -->
-            <div class="container">
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
+            <div class="gallery-column">
+                <div class="gallery-item" style="background-image:url('img/ems.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
                         <span class="gallery-item-text">Расслабляющий массаж</span>
@@ -352,72 +298,18 @@
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
                         <span class="gallery-item-title">EMS</span>
                         <span class="gallery-item-text">Групповые EMS тренировки</span>
                     </div>
                     <div class="view-btn">
                         <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/ems.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">EMS</span>
-                        <span class="gallery-item-text">Групповые EMS тренировки</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-camera"></i>
-                    </div>
-                </div>
-                <div class="gallery-item" style="background-image:url('img/relax.png')">
-                    <div class="filter">
-                        <span class="gallery-item-title">Массаж</span>
-                        <span class="gallery-item-text">Расслабляющий массаж</span>
-                    </div>
-                    <div class="view-btn">
-                        <i class="fas fa-play"></i>
                     </div>
                 </div>
             </div>
             <!-- 3 -->
-            <div class="container">
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
@@ -436,6 +328,30 @@
                         <i class="fas fa-camera"></i>
                     </div>
                 </div>
+            </div>
+            <!-- 4 -->
+            <div class="gallery-column">
+                <div class="gallery-item" style="background-image:url('img/ems.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">Массаж</span>
+                        <span class="gallery-item-text">Расслабляющий массаж</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="gallery-item" style="background-image:url('img/relax.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">EMS</span>
+                        <span class="gallery-item-text">Групповые EMS тренировки</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+            </div>
+            <!-- 1 -->
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
@@ -454,7 +370,19 @@
                         <i class="fas fa-camera"></i>
                     </div>
                 </div>
+            </div>
+            <!-- 2 -->
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/ems.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">Массаж</span>
+                        <span class="gallery-item-text">Расслабляющий массаж</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">EMS</span>
                         <span class="gallery-item-text">Групповые EMS тренировки</span>
@@ -463,6 +391,51 @@
                         <i class="fas fa-camera"></i>
                     </div>
                 </div>
+            </div>
+                <!-- 3 -->
+                <div class="gallery-column">
+                    <div class="gallery-item" style="background-image:url('img/relax.png')">
+                        <div class="filter">
+                            <span class="gallery-item-title">Массаж</span>
+                            <span class="gallery-item-text">Расслабляющий массаж</span>
+                        </div>
+                        <div class="view-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                    </div>
+                    <div class="gallery-item" style="background-image:url('img/ems.png')">
+                        <div class="filter">
+                            <span class="gallery-item-title">EMS</span>
+                            <span class="gallery-item-text">Групповые EMS тренировки</span>
+                        </div>
+                        <div class="view-btn">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                    </div>
+                </div>
+            <!-- 4 -->
+                <div class="gallery-column">
+                    <div class="gallery-item" style="background-image:url('img/ems.png')">
+                        <div class="filter">
+                            <span class="gallery-item-title">Массаж</span>
+                            <span class="gallery-item-text">Расслабляющий массаж</span>
+                        </div>
+                        <div class="view-btn">
+                            <i class="fas fa-play"></i>
+                        </div>
+                    </div>
+                    <div class="gallery-item" style="background-image:url('img/relax.png')">
+                        <div class="filter">
+                            <span class="gallery-item-title">EMS</span>
+                            <span class="gallery-item-text">Групповые EMS тренировки</span>
+                        </div>
+                        <div class="view-btn">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                    </div>
+                </div>
+            <!-- 1 -->
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
@@ -481,6 +454,30 @@
                         <i class="fas fa-camera"></i>
                     </div>
                 </div>
+            </div>
+            <!-- 2 -->
+            <div class="gallery-column">
+                <div class="gallery-item" style="background-image:url('img/ems.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">Массаж</span>
+                        <span class="gallery-item-text">Расслабляющий массаж</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="gallery-item" style="background-image:url('img/relax.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">EMS</span>
+                        <span class="gallery-item-text">Групповые EMS тренировки</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="gallery-column">
                 <div class="gallery-item" style="background-image:url('img/relax.png')">
                     <div class="filter">
                         <span class="gallery-item-title">Массаж</span>
@@ -488,6 +485,36 @@
                     </div>
                     <div class="view-btn">
                         <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="gallery-item" style="background-image:url('img/ems.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">EMS</span>
+                        <span class="gallery-item-text">Групповые EMS тренировки</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="gallery-column">
+                <div class="gallery-item" style="background-image:url('img/ems.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">Массаж</span>
+                        <span class="gallery-item-text">Расслабляющий массаж</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
+                <div class="gallery-item" style="background-image:url('img/relax.png')">
+                    <div class="filter">
+                        <span class="gallery-item-title">EMS</span>
+                        <span class="gallery-item-text">Групповые EMS тренировки</span>
+                    </div>
+                    <div class="view-btn">
+                        <i class="fas fa-camera"></i>
                     </div>
                 </div>
             </div>
