--- a/fucking-menu/index.html
+++ b/fucking-menu/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    <header> 
+    <!--! Header -->
+    <header></header>
+    <!--! Top-line -->
+    <div class="static-container">
         <div class="top-line">
             <div class="container">
                 <div class="top-line-content row justify-content-between align-items-center">
@@ -19,12 +22,11 @@
                         <button class="burger-btn"><span></span></button>
                         <ul class="menu-items">
                             <li class="has-child has-child-1">
-                                <a href="#">Link <div class="arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
+                                <a href="#" class="arrow-link">Link</a>
                                 <ul class="dropdown">
                                     <li><a href="">Dropdown item</a></li>
                                     <li class="has-child has-child-2">
-                                        <a href="">Dropdown item <div class="arrow"><i class="fas fa-angle-down"></i></div></a>
+                                        <a href="" class="arrow-link">Dropdown item </a>
                                         <ul class="dropdown">
                                             <li><a href="">Dropdown item</a></li>
                                             <li><a href="">Dropdown item</a></li>
@@ -40,13 +42,11 @@
                             <li><a href="">Link</a></li>
 
                             <li class="has-child has-child-1">
-                                <a href="">Link <div class="arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
+                                <a href="" class="arrow-link">Link</a>
                                 <ul class="dropdown">
                                     <li><a href="">Dropdown item</a></li>
                                     <li class="has-child has-child-2">
-                                        <a href="">Link <div class="arrow"><i class="fas fa-angle-down"></i></div>
-                                        </a>
+                                        <a href="" class="arrow-link">Link</a>
                                         <ul class="dropdown">
                                             <li><a href="">Dropdown item</a></li>
                                             <li><a href="">Dropdown item</a></li>
@@ -64,7 +64,56 @@
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+    <main class="main-content">
+        <div class="container">
+            <h1 class="main-title text-center">S.T.A.L.K.E.R <span class="orange">2</span></h1>
+            <p class="text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ab ipsum dicta debitis distinctio. Expedita vel quod laborum aut magnam praesentium soluta commodi, nesciunt quae cum molestias, similique voluptatem iste qui ex rem officiis. Vel quia dolor corrupti molestiae delectus nemo hic cumque rem sequi culpa quaerat, accusamus voluptatum reprehenderit cum quos! Obcaecati, voluptatem maiores facere aspernatur cupiditate quam eaque accusantium voluptatibus quas doloribus deserunt, consequatur quos veritatis quod non!</p>
+            <div class="articles row justify-content-between">
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+            </div>
+            <div class="articles row justify-content-between">
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+                <div class="col-md-3 article">
+                    <p class="article-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis animi, corrupti libero ex facere excepturi.</p>
+                </div>
+            </div>
+            <br>
+        </div>
+    </main>
+    <section class="section-blue">
+        <div class="container">
+            <h2 class="text-center">Blue section</h2>
+        </div>
+    </section>
+    <section class="section-green">
+        <div class="container">
+            <h2 class="text-center">Green section</h2>
+        </div>
+    </section>
+    <section class="section-orange">
+        <div class="container">
+            <h2 class="text-center">Orange section</h2>
+        </div>
+    </section>
+    <section class="section-black">
+        <div class="container">
+            <h2 class="text-center">Black section</h2>
+        </div>
+    </section>
     <!--! Scripts -->
     <script src="js/scripts.min.js"></script>
 </body>
