--- a/Garlico/index.html
+++ b/Garlico/index.html
@@ -558,14 +558,14 @@
 					<h3 class="universal-title">Форма обратной связи:</h3>
 					<form class="forms">
 						<div class="inputs">
-							<input class="field" type="text" placeholder="Ваше имя">
-							<input class="field" type="email" placeholder="Ваш E-mail">
-							<input class="field" type="tel" placeholder="Ваш телефон">
+							<input class="field" type="text" placeholder="Ваше имя" required>
+							<input class="field" type="email" placeholder="Ваш E-mail" required>
+							<input class="field" type="tel" placeholder="Ваш телефон" required>
 							<input type="submit" value="Отправить">
 						</div>
 						<div class="textarea">
 							<label for="text-area">Введите текст:</label>
-							<textarea id="text-area"></textarea>
+							<textarea id="text-area" required></textarea>
 						</div>
 					</form>
 				</div>
