--- a/Nanonasibulin/research.html
+++ b/Nanonasibulin/research.html
@@ -407,6 +407,10 @@
 					</div>
 				</div>
 			</div>
+			<!-- Copyright-line -->
+			<div class="copyright-line">
+				<span class="text">COPYRIGHT © 2015–2016 <span class="bold">NANONASIBULIN.COM</span></span>
+			</div>
 		</footer>
 	</div>
 	<script src="js/scripts.min.js"></script>
