--- a/Nanonasibulin/gallery.html
+++ b/Nanonasibulin/gallery.html
@@ -395,10 +395,12 @@
 					</div>
 				</div>
 			</div>
+			<!-- Copyright-line -->
+			<div class="copyright-line">
+				<span class="text">COPYRIGHT © 2015–2016 <span class="bold">NANONASIBULIN.COM</span></span>
+			</div>
 		</footer>
 	</div>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPNRzQmuovSCC3tPgxMluQE3tgkTulM_E&callback=initMap">
-	</script>
 	<script src="js/scripts.min.js"></script>
 </body>
 </html>
