--- a/Nanonasibulin/index.html
+++ b/Nanonasibulin/index.html
@@ -246,10 +246,10 @@
 				</div>
 			</div>
 			<div id="map-block"></div>
-			<button class="yandex-maps-btn hvr-shutter-out-horizontal">
+			<a href="https://www.google.com/maps/search/Laboratory+of+NanoMaterials+Skolkovo+Institute+of+Science+and+Technology+Skolkovo+Innovation+Center+Nobel+str.+3,+143026,+Moscow,+Russia/@55.6845427,37.3395544,17.5z" class="yandex-maps-btn hvr-shutter-out-horizontal" target="blank">
 				<span class="map-marker"><i class="fas fa-map-marker-alt"></i></span>
-				<span class="title">Yandex Maps</span> 
-			</button>
+				<span class="title">Google Maps</span> 
+			</a>
 			<div class="container">
 				<div class="boxes">
 					<div class="box">
@@ -300,13 +300,194 @@
 						<a href="#" class="soc-btn btn"><i class="fab fa-facebook-f"></i></a>
 						<a href="#" class="soc-btn btn"><i class="fab fa-google"></i></a>
 					</div>
-				</div>
+				</div>				
+			</div>
+			<!-- Copyright-line -->
+			<div class="copyright-line">
+				<span class="text">COPYRIGHT © 2015–2016 <span class="bold">NANONASIBULIN.COM</span></span>
 			</div>
 		</footer>
 	</div>
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPNRzQmuovSCC3tPgxMluQE3tgkTulM_E&callback=initMap">
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPNRzQmuovSCC3tPgxMluQE3tgkTulM_E&callback=initMap">
 	</script>
 	<script src="js/scripts.min.js"></script>
+	<!-- Google maps -->
+	<script>
+		function initMap() {
+				let skolkovoLocation = {
+			lat: 55.741245300808686, 
+			lng: 37.51009225845337
+		}
+		// Google maps
+	    let map = new google.maps.Map(document.getElementById('map-block'), {
+	      center: skolkovoLocation,
+	      zoom: 12,
+	      streetViewControl: false,
+	      styles: [
+	  {
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#f5f5f5"
+	      }
+	    ]
+	  },
+	  {
+	    "elementType": "labels.icon",
+	    "stylers": [
+	      {
+	        "visibility": "off"
+	      }
+	    ]
+	  },
+	  {
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#616161"
+	      }
+	    ]
+	  },
+	  {
+	    "elementType": "labels.text.stroke",
+	    "stylers": [
+	      {
+	        "color": "#f5f5f5"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "administrative.land_parcel",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#bdbdbd"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "poi",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#eeeeee"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "poi",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#757575"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "poi.park",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#e5e5e5"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "poi.park",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#9e9e9e"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "road",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#ffffff"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "road.arterial",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#757575"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "road.highway",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#dadada"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "road.highway",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#616161"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "road.local",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#9e9e9e"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "transit.line",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#e5e5e5"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "transit.station",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#eeeeee"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "water",
+	    "elementType": "geometry",
+	    "stylers": [
+	      {
+	        "color": "#1b3f5a"
+	      }
+	    ]
+	  },
+	  {
+	    "featureType": "water",
+	    "elementType": "labels.text.fill",
+	    "stylers": [
+	      {
+	        "color": "#9e9e9e"
+	      }
+	    ]
+	  }
+		]
+		    });
 
+    	let marker = new google.maps.Marker({position: skolkovoLocation, map: map});
+		}
+		
+	</script>
 </body>
 </html>
