--- a/Nanonasibulin/index.html
+++ b/Nanonasibulin/index.html
@@ -287,11 +287,11 @@
 					<ul class="nav-menu footer-menu">
 						<li><a href="#">Home</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="#">Group</a></li>
-						<li><a href="#">Publications</a></li>
-						<li><a href="#">CV</a></li>
-						<li><a href="#">Gallery</a></li>
-						<li><a href="#">News</a></li>
+						<li><a href="group.html">Group</a></li>
+						<li><a href="publications.html">Publications</a></li>
+						<li><a href="cv.html">CV</a></li>
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="news.html">News</a></li>
 					</ul>
 					<!-- Social button -->
 					<div class="soc-btns">
