--- a/Nanonasibulin/post.html
+++ b/Nanonasibulin/post.html
@@ -130,7 +130,7 @@
 					<div class="logo"><img src="img/light-logo.png" alt="light-logo"></div>
 					<!-- Navigation menu -->
 					<ul class="nav-menu footer-menu">
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="research.html">Research</a></li>
 						<li><a href="group.html">Group</a></li>
 						<li><a href="publications.html">Publications</a></li>
