--- a/Armata/index.html
+++ b/Armata/index.html
@@ -21,7 +21,7 @@
 			<div class="container">
 				<div class="row justify-content-between no-gutters">
 					<div class="logo col-auto col-sm-6 col-md-7 col-lg-8 col-xl-3 order-1">
-						<img src="img/logo.svg" alt="logo">
+						<img src="img/logo.png" alt="logo">
 					</div>
 					<div class="col-auto col-xl-7 order-xl-2 order-3 align-self-center">
 						<nav class="main-menu">
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 			<div class="bottom-triangle">
-				<img src="img/icons/section_1/scales.svg" alt="scales" class="scales-triangle">
+				<img src="img/icons/section_1/scales.png" alt="scales" class="scales-triangle">
 				<img src="img/logo_triangle.svg" alt="logo_triangle" class="logo-triangle">
 			</div>
 		</div>
@@ -183,7 +183,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/1.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/1.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Разработка новой структуры управления бизнесом</h5>
 							</div>
@@ -191,7 +191,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/2.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/2.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Консультации по предпродажной подготовке бизнеса</h5>
 							</div>
@@ -199,7 +199,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/3.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/3.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Анализ стоимости бизнеса и активов</h5>
 							</div>
@@ -207,7 +207,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/4.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/4.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Консультации с покупателями и сопровождение</h5>
 							</div>
@@ -215,7 +215,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/5.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/5.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Юридический аудит приобретаемого актива</h5>
 							</div>
@@ -223,7 +223,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/6.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/6.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Разработка оптимальной схемы приобретения актива</h5>
 							</div>
@@ -231,7 +231,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/7.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/7.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Организация финансирования сделки</h5>
 							</div>
@@ -239,7 +239,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive icon-wrap">
-									<img src="img/icons/section_2/8.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/8.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Подготовка и сопровождение документации</h5>
 							</div>
@@ -247,7 +247,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive">
-									<img src="img/icons/section_2/9.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/9.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Получение разрешений в государственных органах</h5>
 							</div>
@@ -255,7 +255,7 @@
 						<div class="col-4 col-sm-3 col-md-2 sb-wrap" data-aos="fade-up">
 							<div class="sb-item">
 								<div class="img-responsive">
-									<img src="img/icons/section_2/10.svg" alt="icon" class="icon">
+									<img src="img/icons/section_2/10.png" alt="icon" class="icon">
 								</div>
 								<h5 class="title">Интеграция нового актива в схему управления холдингом</h5>
 							</div>
@@ -313,7 +313,7 @@
 					<div class="col-md-4 info-item-wrap" data-aos="fade-up">
 						<div class="info-item">
 							<div class="img-container">
-								<img src="img/icons/section_3/folder.svg" alt="folder">
+								<img src="img/icons/section_3/folder.png" alt="folder">
 							</div>
 						</div>
 					</div>
@@ -369,21 +369,21 @@
 				<div class="row justify-content-center align-items-center flex-column flex-sm-row">
 					<div class="card dark" data-aos="flip-left" data-aos-duration="1500">
 						<div class="img">
-							<img src="img/icons/section_4/1.svg" alt="icon">
+							<img src="img/icons/section_4/1.png" alt="icon">
 						</div>
 						<h5 class="card-title">Скидки</h5>
 						<p class="card-text">Предоставляем всем нашим клиентам уникальную возможность получить скидку 50% на все услуги</p>
 					</div>
 					<div class="card dark" data-aos="zoom-in" data-aos-duration="1500">
 						<div class="img">
-							<img src="img/icons/section_4/2.svg" alt="icon">
+							<img src="img/icons/section_4/2.png" alt="icon">
 						</div>
 						<h5 class="card-title">Команда</h5>
 						<p class="card-text">У нас большой опыт работы в крупнейших консалтинговых компаниях</p>
 					</div>
 					<div class="card dark" data-aos="flip-right" data-aos-duration="1500">
 						<div class="img">
-							<img src="img/icons/section_4/3.svg" alt="icon">
+							<img src="img/icons/section_4/3.png" alt="icon">
 						</div>
 						<h5 class="card-title">Скорость</h5>
 						<p class="card-text">Приступаем к выполнению обязательст в день обращения в нашу компанию</p>
@@ -415,43 +415,40 @@
 					<div class="tc-triangle" data-aos="zoom-in">
 						<div class="triangle-content">
 							<div class="icon">
-								<img src="img/icons/section_5/1.svg" alt="icon" class="icon">
+								<img src="img/icons/section_5/1.png" alt="icon" class="icon">
 							</div>
 							<h5 class="title">1. Вы оставляете заявку</h5>
 						</div>
 						<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="svg2">
 							<path id="path4138" d="M 3.4644996,126.28999 3.1137219,4.0613763 l 240.7182181,0 43.11847,58.7692707 -43.28202,63.461773 z" style="fill:#f39f18;fill-opacity:1" />
 						</svg>						
-						<!-- <img src="img/tc_triangle.svg" alt="tc_triangle" class="triangle"> -->
 					</div>
 					<div class="tc-triangle" data-aos="zoom-in">
 						<div class="triangle-content">
 							<div class="icon">
-								<img src="img/icons/section_5/2.svg" alt="icon" class="icon">
+								<img src="img/icons/section_5/2.png" alt="icon" class="icon">
 							</div>
 							<h5 class="title">2. Подписываем договор</h5>
 						</div>
 						<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="svg2">
 							<path id="path4138-3" d="M 3.3821314,126.02828 46.475601,62.999427 3.0313514,3.799673 l 240.7182186,0 43.11847,58.769271 -43.28202,63.461766 z" style="fill:#f39f18;fill-opacity:1" />
 						</svg>
-						<!-- <img src="img/tc_triangle.svg" alt="tc_triangle" class="triangle"> -->
 					</div>
 					<div class="tc-triangle" data-aos="zoom-in">
 						<div class="triangle-content">
 							<div class="icon">
-								<img src="img/icons/section_5/3.svg" alt="icon" class="icon">
+								<img src="img/icons/section_5/3.png" alt="icon" class="icon">
 							</div>
 							<h5 class="title">3. Мы проводим оценку</h5>
 						</div>
 						<svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 291.01178 129" height="129" width="291.01178" version="1.1" id="svg2">
 							<path id="path4138-3" d="M 3.3821314,126.02828 46.475601,62.999427 3.0313514,3.799673 l 240.7182186,0 43.11847,58.769271 -43.28202,63.461766 z" style="fill:#f39f18;fill-opacity:1" />
 						</svg>
-						<!-- <img src="img/tc_triangle.svg" alt="tc_triangle" class="triangle"> -->
 					</div>
 					<div class="tc-triangle" data-aos="zoom-in">
 						<div class="triangle-content">
 							<div class="icon">
-								<img src="img/icons/section_5/4.svg" alt="icon" class="icon">
+								<img src="img/icons/section_5/4.png" alt="icon" class="icon">
 							</div>
 							<h5 class="title">4. Вы получаете отчет</h5>
 						</div>
@@ -571,25 +568,25 @@
 						<div class="group-items" data-aos="zoom-in">
 							<div class="item">
 								<div class="icon">
-									<img src="img/icons/section_8/1.svg" alt="1">
+									<img src="img/icons/section_8/1.png" alt="1">
 								</div>
 								<h6 class="title">Диплом по налогообложению РФ (ДипНРФ), квалификация ACCA</h6>
 							</div>
 							<div class="item">
 								<div class="icon">
-									<img src="img/icons/section_8/2.svg" alt="2">
+									<img src="img/icons/section_8/2.png" alt="2">
 								</div>
 								<h6 class="title">Аттестат профессионального бухгалтера Института профессиональных бухгалтеров России </h6>
 							</div>
 							<div class="item">
 								<div class="icon">
-									<img src="img/icons/section_8/3.svg" alt="3">
+									<img src="img/icons/section_8/3.png" alt="3">
 								</div>
 								<h6 class="title">Аттестат налогового консультанта 2-й категории Палаты налоговых консультантов России</h6>
 							</div>
 							<div class="item">
 								<div class="icon">
-									<img src="img/icons/section_8/4.svg" alt="4">
+									<img src="img/icons/section_8/4.png" alt="4">
 								</div>
 								<h6 class="title">Призер Первой всероссийской премии бухгалтеров строительной отрасли «Профессиональные грани-2011»</h6>
 							</div>
