--- a/Nanonasibulin/index.html
+++ b/Nanonasibulin/index.html
@@ -48,6 +48,7 @@
 				<!-- Hamburger -->
 				<button class="burger-btn"><span></span></button>
 			</nav>
+			<div class="nav-empty"></div>
 		</header>
 		<!-- Slider -->
 		<section class="slider-info">
