--- a/i-shop/main.html
+++ b/i-shop/main.html
@@ -48,16 +48,16 @@
 								<ul class="sub-menu-1">
 									<li><a href="courses-list.html">Разработка мобильных приложений</a></li>
 									<li class="has-child-2">
-										<a href="courses-grid.html" class="dropdown-link">Яндекс директ <i class="fa fa-angle-right dropdown-link-desktop-icon"></i></a>
+										<a href="courses-list.html" class="dropdown-link">Яндекс директ <i class="fa fa-angle-right dropdown-link-desktop-icon"></i></a>
 										<!-- sub menu 2 level -->
 										<ul class="sub-menu-2">
-											<li><a href="courses-grid.html">Яндекс директ</a></li>
+											<li><a href="courses-list.html">Яндекс директ</a></li>
 											<li><a href="courses-list.html">Разработка мобильных приложений</a></li>
-											<li><a href="courses-single-item.html">Courses single item</a></li>
+											<li><a href="courses-list.html">Courses single item</a></li>
 										</ul>
 										<!-- / sub menu -->
 									</li>
-									<li><a href="courses-single-item.html">Courses single item</a></li>
+									<li><a href="courses-list.html">Courses single item</a></li>
 								</ul>
 								<!-- / sub menu -->
 							</li>
@@ -68,7 +68,7 @@
 								<a href="page-login.html">Авторизация</a>
 							</li>
 							<li>
-								<a href="events-single-item.html">Обратная связь</a>
+								<a href="#">Обратная связь</a>
 							</li>
 						</ul>
 					</nav>
