--- a/i-shop/courses-list.html
+++ b/i-shop/courses-list.html
@@ -165,7 +165,7 @@
 								</div>
 								<br>
 								<!-- View btn -->
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -220,7 +220,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -276,7 +276,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -336,7 +336,7 @@
 								</div>
 								<br>
 								<!-- View btn -->
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -391,7 +391,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -447,7 +447,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 						</ul>
