--- a/i-shop/main.html
+++ b/i-shop/main.html
@@ -162,7 +162,7 @@
 								</div>
 								<br>
 								<!-- View btn -->
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -217,7 +217,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -273,7 +273,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 						</ul>
@@ -416,7 +416,7 @@
 								</div>
 								<br>
 								<!-- View btn -->
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -471,7 +471,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 							<!-- product -->
@@ -527,7 +527,7 @@
 									</div>
 								</div>
 								<br>
-								<a href="shop-cart.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
+								<a href="shop-single-product.html" rel="nofollow" data-product_id="70" data-product_sku="" class="cws-button border-radius icon-left alt">Посмотреть</a>
 							</li>
 							<!--/ product -->
 						</ul>
